# Planning

./: .gitignore  README.md  androidDevshell.nix  flake.nix  meson.build  pixiewood.xml  planning.desktop
src/: app.hpp  main.c  main.cpp  planList.cpp  planPage.cpp  plans.cpp  style.css  style.hpp
src/functionality/: json.cpp  sync.cpp  utils.hpp
src/functionality/lists/: lists.cpp  lists.hpp  renderLists.cpp
src/functionality/plans/: make.cpp  plans.cpp  plans.hpp  remove.cpp
subprojects/: cairo.wrap  cairomm.wrap  fontconfig.wrap  gdk-pixbuf.wrap  glibmm.wrap  gtkmm.wrap  harfbuzz.wrap  nlohmann_json.wrap  pangomm.wrap
